--- a/style.css
+++ b/style.css
@@ -1,7 +1,297 @@
-body {
-  font-family: Roboto, sans-serif;
-  background-color: #fff;
-  color: #000;
+
+
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+
+body{
+  background-color: #fffef9;
+}
+
+.main-index {
+  font-family: "Roboto", sans-serif;
+  color:#00291C;
+ 
+}
+.h1-name {
+  font-family: 'Inter', sans-serif;
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 1.1;
+  color:#00291C; 
+  text-align: center;
+}
+
+.h2-name {
+  font-family: 'Inter', sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  color: #00291C;
+  margin-top: 20px;
+  margin-bottom: 4px;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+   
+}
+
+
+
+header {
+  /*background-color: #00110b;*/
+  padding: 20px 0;
+  width: 100%; 
+  position:fixed;
+
+  box-sizing: border-box;
+  background: transparent;
+   z-index: 10;
+ 
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+
+/*header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+
+  padding: 20px 40px;
+  background: transparent;
+
+  z-index: 10;
+ 
+  justify-content: space-between;
+  align-items: center;
+}*/
+
+
+
+
+header a {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px; /* or 18px if you want slightly bigger */
+  /*color: #fff;*/
+  color: #000000;
+}
+
+header a:hover { 
+  color: #a2c266;
+}
+
+.header-container {
+  max-width: 1200px;
+  height: 40px;
+  margin: 0 auto;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-logo {
+  width: 50px;
+
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 30px;
+}
+
+nav a {
+  text-decoration: none;
+  /*color: #fff;*/
+  color: #000000;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+
+
+
+
+
+.main-container {
+    position: relative;
+  height: 80vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+/* .main-profile-video {
+ position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: c;
+  z-index: -1;
+  filter: brightness(0.6);
+}*/
+
+
+
+.main-profile-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  filter: brightness(0.6);
+}
+
+
+
+.intro-text {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+  color: white;
+}
+
+
+
+
+
+.main-projects {
+  text-align: center;
+  padding: 80px 40px 40px;
+}
+.main-projects h2 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.main-projects p {
+  font-size: 16px;
+  margin-bottom: 40px;
+  color: #555;
+}
+.project-grid {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.main-project-card {
+  width: 300px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.08);
+  transition: 0.3s ease;
+}
+.main-project-card:hover {
+  transform: scale(1.03);
+  background-color: #00291c12;
+}
+.project-info {
+  padding: 20px;
+}
+.project-info h3 {
+  font-size: 16px;
+  font-weight: 600;
+}
+.project-info p {
+  font-size: 14px;
+  color: #777;
+}
+.project-info button {
+  margin-top: 10px;
+  padding: 8px 16px;
+  background: #00291C;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.project-info button:hover {
+  background: #355f4b;
+}
+
+
+/* Why Dandelion Section */
+#why-dandelion {
+  padding: 4rem 2rem;
+  text-align: center;
+  background-color: #fffef9;
+}
+
+#why-dandelion h2 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+#why-dandelion p {
+  max-width: 600px;
+  margin: 0 auto;
+  font-size: 1rem;
+  line-height: 1.9;
+}
+
+
+footer {
+  background-color: #ffffff;
+  color: #00291C;
+  padding: 30px 40px;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px
+}
+
+.footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+
+.left-footer {
+    font-size: 24px;
+  font-weight: 300;
+}
+
+.right-footer {
+   display: flex;
+  gap: 20px;
+  align-items: center;
+  font-size: 14px;
+}
+
+
+
+
+
+
+
+.dandelion-seed {
+  position: absolute;
+  top: 65%; 
+  left: 20%;
+  width: 70px;
+  z-index: 5;
+  opacity: 0;
 }
